# tradfin2simplicity-tutorial

./: .gitignore  README.md  pyproject.toml
docs/: jets.md
lib/: __init__.py
notebook/: 00_initialize.ipynb  01-simplicityhl-intro.ipynb  03_hls.ipynb  compare-with traditional-option.ipynb  inheritance.ipynb  nb001_initialize.ipynb  options.simf  options.wit
notebook/script/: hls_contract.simf  hls_contract.wit  lastwill.simf  lastwill.wit  lastwill_yearly.simf  lastwill_yearly.wit
